--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "type": "commonjs",
   "dependencies": {
     "amqplib": "^0.10.5",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "connect-redis": "^5.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "socket.io": "^4.8.1",
